--- a/app-scroll-behaviors/app-custom-scroller-behavior.html
+++ b/app-scroll-behaviors/app-custom-scroller-behavior.html
@@ -21,9 +21,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
  *
  * @polymerBehavior
  */
-Polymer.AppCustomScrollerBehavior = (function() {
-
-  return {
+  Polymer.AppCustomScrollerBehavior = {
 
     properties: {
 
@@ -157,7 +155,5 @@ Polymer.AppCustomScrollerBehavior = (function() {
     }
 
   };
-
-})();
 </script>
 
