--- a/helpers/helpers.html
+++ b/helpers/helpers.html
@@ -40,6 +40,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
    * ```
    *
    * @param {Object} options {top: Number, left: Number, behavior: String(smooth | silent)}
+   * @method
    */
   Polymer.AppLayout.scroll = function scroll(options) {
     options = options || {};
