--- a/app-scroll-effects/app-scroll-effects-behavior.html
+++ b/app-scroll-effects/app-scroll-effects-behavior.html
@@ -84,7 +84,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
      * Updates the scroll state. This method should be overridden
      * by the consumer of this behavior.
      *
-     * @abstract
      * @method _updateScrollState
      */
     _updateScrollState: function() {},
@@ -94,7 +93,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
      * That is, visible in the current viewport. This method should be
      * overridden by the consumer of this behavior.
      *
-     * @abstract
      * @method isOnScreen
      * @return {boolean}
      */
@@ -106,7 +104,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
      * Returns true if there's content below the current element. This method
      * should be overridden by the consumer of this behavior.
      *
-     * @abstract
      * @method isContentBelow
      * @return {boolean}
      */
@@ -153,7 +150,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
      * @param {string} effectName The name of an effect defined in `Polymer.AppLayout.scrollEffects`
      * @param {Object=} effectConfig The effect config object if the effect accepts config
      *   values. (Optional)
-     * @return {Object} The effect object. This object has the following interface:
+     * @return {Object}? The effect object. This object has the following interface:
      *
      *  * `obj.setUp()`, Sets up the requirements for the effect.
      *       This function is called automatically before the `effect` function returns.
@@ -170,8 +167,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     createEffect: function(effectName, effectConfig) {
       var effectDef = Polymer.AppLayout.scrollEffects[effectName];
       if (!effectDef) {
-        throw new ReferenceError(this._getUndefinedMsg(effectName));
-        return;
+        throw new ReferenceError('Scroll effect `' + effectName + '` is undefined');
       }
       var prop = this._boundEffect(effectDef, effectConfig || {});
       prop.setUp();
@@ -211,8 +207,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     /**
      * Returns an effect object bound to the current context.
      *
-     * @param {Object}
-     * @param {Object=} The effect config object if the effect accepts config values. (Optional)
+     * @param {Object} effectDef
+     * @param {Object=} effectsConfig The effect config object if the effect accepts config values. (Optional)
      */
     _boundEffect: function(effectDef, effectsConfig) {
       effectsConfig = effectsConfig || {};
@@ -262,8 +258,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     /**
      * Runs the effects.
      *
-     * @param {number} The progress
-     * @param {number} The top position of the current element relative to the viewport.
+     * @param {number} p The progress
+     * @param {number} y The top position of the current element relative to the viewport.
      */
     _runEffects: function(p, y) {
       this._effectsRunFn.forEach(function(run) {
