--- a/app-scroll-effects/app-scroll-effects.html
+++ b/app-scroll-effects/app-scroll-effects.html
@@ -12,103 +12,116 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <script>
 
-(function(scrollEffects) {
-  function interpolate(progress, points, fn, ctx) {
-    fn.apply(ctx, points.map(function(point) {
-      return point[0] + (point[1] - point[0]) * progress;
-    }));
-  }
+function interpolate(progress, points, fn, ctx) {
+  fn.apply(ctx, points.map(function(point) {
+    return point[0] + (point[1] - point[0]) * progress;
+  }));
+}
+
+
+Polymer.AppLayout.scrollEffects = {
 
   /**
    * While scrolling down, fade in the rear background layer and fade out the front background
    * layer (opacity interpolated based on scroll position).
    */
-  scrollEffects['blend-background'] = {
+  'blend-background': {
     setUp: function setUp() {
-      this.$.backgroundFrontLayer.style.willChange = 'opacity';
-      this.$.backgroundFrontLayer.style.webkitTransform = 'translateZ(0)';
-      this.$.backgroundRearLayer.style.willChange = 'opacity';
-      this.$.backgroundRearLayer.style.webkitTransform = 'translateZ(0)';
-      this.$.backgroundRearLayer.style.opacity = 0;
+      var el = /* PolymerElement */ (this);
+      el.$['backgroundFrontLayer'].style.willChange = 'opacity';
+      el.$['backgroundFrontLayer'].style.webkitTransform = 'translateZ(0)';
+      el.$['backgroundRearLayer'].style.willChange = 'opacity';
+      el.$['backgroundRearLayer'].style.webkitTransform = 'translateZ(0)';
+      el.$['backgroundRearLayer'].style.opacity = 0;
     },
     run: function run(p, y) {
-      this.$.backgroundFrontLayer.style.opacity = 1 - p;
-      this.$.backgroundRearLayer.style.opacity = p;
+      var el = /* PolymerElement */ (this);
+      el.$['backgroundFrontLayer'].style.opacity = 1 - p;
+      el.$['backgroundRearLayer'].style.opacity = p;
     }
-  };
+  },
 
   /**
    * Upon scrolling past a threshold, fade in the rear background layer and fade out the front
    * background layer (opacity CSS transitioned over time).
    */
-  scrollEffects['fade-background'] = {
+  'fade-background' : {
     setUp: function setUp(config) {
       var duration = config.duration || '0.5s';
-      this.$.backgroundFrontLayer.style.willChange = 'opacity';
-      this.$.backgroundFrontLayer.style.webkitTransform = 'translateZ(0)';
-      this.$.backgroundFrontLayer.style.transitionProperty = 'opacity';
-      this.$.backgroundFrontLayer.style.transitionDuration = duration;
-      this.$.backgroundRearLayer.style.willChange = 'opacity';
-      this.$.backgroundRearLayer.style.webkitTransform = 'translateZ(0)';
-      this.$.backgroundRearLayer.style.transitionProperty = 'opacity';
-      this.$.backgroundRearLayer.style.transitionDuration = duration;
+      var el = /* PolymerElement */ (this);
+      el.$['backgroundFrontLayer'].style.willChange = 'opacity';
+      el.$['backgroundFrontLayer'].style.webkitTransform = 'translateZ(0)';
+      el.$['backgroundFrontLayer'].style.transitionProperty = 'opacity';
+      el.$['backgroundFrontLayer'].style.transitionDuration = duration;
+      el.$['backgroundRearLayer'].style.willChange = 'opacity';
+      el.$['backgroundRearLayer'].style.webkitTransform = 'translateZ(0)';
+      el.$['backgroundRearLayer'].style.transitionProperty = 'opacity';
+      el.$['backgroundRearLayer'].style.transitionDuration = duration;
     },
     run: function run(p, y) {
+      var el = /* PolymerElement */ (this);
       if (p >= 1) {
-        this.$.backgroundFrontLayer.style.opacity = 0;
-        this.$.backgroundRearLayer.style.opacity = 1;
+        el.$['backgroundFrontLayer'].style.opacity = 0;
+        el.$['backgroundRearLayer'].style.opacity = 1;
       } else {
-        this.$.backgroundFrontLayer.style.opacity = 1;
-        this.$.backgroundRearLayer.style.opacity = 0;
+        el.$['backgroundFrontLayer'].style.opacity = 1;
+        el.$['backgroundRearLayer'].style.opacity = 0;
       }
     }
-  };
+  },
 
   /**
    * Vertically translate the background based on a factor of the scroll position.
    */
-  scrollEffects['parallax-background'] = {
+  'parallax-background': {
+    /**
+     * @param {{scalar: string}} config
+     */
     setUp: function setUp(config) {
       var scalar = parseFloat(config.scalar);
-      this._deltaBg = this.$.backgroundFrontLayer.offsetHeight - this.$.background.offsetHeight;
-      if (this._deltaBg === 0) {
+      var el = /* PolymerElement */ (this);
+      el._deltaBg = el.$['backgroundFrontLayer'].offsetHeight - el.$.background.offsetHeight;
+      if (el._deltaBg === 0) {
         if (isNaN(scalar)) {
           scalar = 0.8;
         }
-        this._deltaBg = this._deltaHeight * scalar;
+        el._deltaBg = el._deltaHeight * scalar;
       } else {
         if (isNaN(scalar)) {
           scalar = 1;
         }
-        this._deltaBg = this._deltaBg * scalar;
+        el._deltaBg = el._deltaBg * scalar;
       }
     },
     tearDown: function() {
-      delete this._deltaBg;
+      var el = /* PolymerElement */ (this);
+      delete el._deltaBg;
     },
     run: function run(p, y) {
-      this.transform('translate3d(0px, ' + (this._deltaBg * Math.min(1, p)) + 'px, 0px)', this.$.backgroundFrontLayer);
-      if (this.$.backgroundRearLayer) {
-        this.transform('translate3d(0px, ' + (this._deltaBg * Math.min(1, p)) + 'px, 0px)', this.$.backgroundRearLayer);
+      var el = /* PolymerElement */ (this);
+      el.transform('translate3d(0px, ' + (el._deltaBg * Math.min(1, p)) + 'px, 0px)', el.$['backgroundFrontLayer']);
+      if (el.$['backgroundRearLayer']) {
+        el.transform('translate3d(0px, ' + (el._deltaBg * Math.min(1, p)) + 'px, 0px)', el.$['backgroundRearLayer']);
       }
     }
-  };
+  },
 
   /**
    * Transform the font size of a designated title element between two values based on the scroll
    * position.
    */
-  scrollEffects['resize-title'] = {
+  'resize-title': {
     setUp: function setUp() {
-      var title = Polymer.dom(this).querySelector('[title]');
-      var condensedTitle = Polymer.dom(this).querySelector('[condensed-title]');
+      var el = /* PolymerElement */ (this);
+      var title = Polymer.dom(el).querySelector('[title]');
+      var condensedTitle = Polymer.dom(el).querySelector('[condensed-title]');
 
       if (!condensedTitle) {
-        this._warn(this._logf('effects[resize-title]', 'undefined `condensed-title`'));
+        el._warn(el._logf('effects[resize-title]', 'undefined `condensed-title`'));
         return false;
       }
       if (!title) {
-        this._warn(this._logf('effects[resize-title]', 'undefined `title`'));
+        el._warn(el._logf('effects[resize-title]', 'undefined `title`'));
         return false;
       }
 
@@ -129,14 +142,16 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       fx.condensedTitle = condensedTitle;
       fx.title = title;
 
-      this._fxResizeTitle = fx;
+      el._fxResizeTitle = fx;
     },
     tearDown: function tearDown() {
-      delete this._fxResizeTitle;
+      var el = /* PolymerElement */ (this);
+      delete el._fxResizeTitle;
     },
     run: function run(p, y) {
-      var fx = this._fxResizeTitle;
-      if (!this.condenses) {
+      var el = /* PolymerElement */ (this);
+      var fx = el._fxResizeTitle;
+      if (!el.condenses) {
         y = 0;
       }
       if (p >= 1) {
@@ -146,36 +161,38 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         fx.title.style.opacity = 1;
         fx.condensedTitle.style.opacity = 0;
       }
-      interpolate(Math.min(1, p), [
-        [1,  fx.scale],
-        [0, -fx.titleDX],
-        [y, y-fx.titleDY]
-      ],
-      function(scale, translateX, translateY) {
-        this.transform('translate(' + translateX + 'px, ' + translateY + 'px) ' +
-            'scale3d(' + scale + ', ' + scale + ', 1)',
-            fx.title);
-      }, this);
+      interpolate(Math.min(1, p),
+        [
+          [1,  fx.scale],
+          [0, -fx.titleDX],
+          [y, y-fx.titleDY]
+        ],
+        function(scale, translateX, translateY) {
+          el.transform('translate(' + translateX + 'px, ' + translateY + 'px) ' +
+              'scale3d(' + scale + ', ' + scale + ', 1)',
+              fx.title);
+      }, el);
     }
-  };
+  },
 
   /**
    * Upon scrolling past a threshold, CSS transition the font size of a designated title element
    * between two values.
    */
-  scrollEffects['resize-snapped-title'] = {
+  'resize-snapped-title': {
     setUp: function setUp(config) {
-      var title = Polymer.dom(this).querySelector('[title]');
-      var condensedTitle = Polymer.dom(this).querySelector('[condensed-title]');
+      var el = /* PolymerElement */ (this);
+      var title = Polymer.dom(el).querySelector('[title]');
+      var condensedTitle = Polymer.dom(el).querySelector('[condensed-title]');
       var duration = config.duration || '0.2s';
       var fx = {};
 
       if (!condensedTitle) {
-        this._warn(this._logf('effects[resize-snapped-title]', 'undefined `condensed-title`'));
+        el._warn(el._logf('effects[resize-snapped-title]', 'undefined `condensed-title`'));
         return false;
       }
       if (!title) {
-        this._warn(this._logf('effects[resize-snapped-title]', 'undefined `title`'));
+        el._warn(el._logf('effects[resize-snapped-title]', 'undefined `title`'));
         return false;
       }
 
@@ -186,16 +203,18 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       fx.condensedTitle = condensedTitle;
       fx.title = title;
-      this._fxResizeSnappedTitle = fx;
+      el._fxResizeSnappedTitle = fx;
     },
     tearDown: function tearDown() {
-      var fx = this._fxResizeSnappedTitle;
+      var el = /* PolymerElement */ (this);
+      var fx = el._fxResizeSnappedTitle;
       fx.title.style.transition = '';
       fx.condensedTitle.style.transition = '';
-      delete this._fxResizeSnappedTitle;
+      delete el._fxResizeSnappedTitle;
     },
     run: function run(p, y) {
-      var fx = this._fxResizeSnappedTitle;
+      var el = /* PolymerElement */ (this);
+      var fx = el._fxResizeSnappedTitle;
       if (p > 0) {
         fx.title.style.opacity = 0;
         fx.condensedTitle.style.opacity = 1;
@@ -204,28 +223,30 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         fx.condensedTitle.style.opacity = 0;
       }
     }
-  };
+  },
 
   /**
    * Toggles the shadow property in app-header when content is scrolled to create a sense of depth
    * between the element and the content underneath.
    */
-  scrollEffects.waterfall = {
+  waterfall: {
     run: function run(p, y) {
-      this.shadow = this.isOnScreen() && this.isContentBelow();
+      var el = /* PolymerElement */ (this);
+      el.shadow = el.isOnScreen() && el.isContentBelow();
     }
-  };
+  },
 
   /**
    * Shorthand for the waterfall, resize-title, blend-background, and parallax-background effects.
    */
-  scrollEffects.material = {
+  material: {
     setUp: function() {
-      this.effects = 'waterfall resize-title blend-background parallax-background';
+      var el = /* PolymerElement */ (this);
+      el.effects = 'waterfall resize-title blend-background parallax-background';
       return false;
     }
-  };
+  }
+}
 
-})(Polymer.AppLayout.scrollEffects);
 
 </script>
