Disabled paddingTop for now

--- a/app-header-layout/app-header-layout.html
+++ b/app-header-layout/app-header-layout.html
@@ -172,7 +172,7 @@ Using an own scrolling region:
           containerStyle.marginTop = this._headerHeight + 'px';
           containerStyle.paddingTop = '';
         } else {
-          containerStyle.paddingTop = this._headerHeight + 'px';
+          // containerStyle.paddingTop = this._headerHeight + 'px';
           containerStyle.marginTop = '';
         }
 
